--- a/index.html
+++ b/index.html
@@ -229,15 +229,15 @@
                             <div class="row">
                                 <div class="col-md-5 cmd-padding valign">
                                     <div class="img1 wow imago" data-wow-delay=".5s">
-                                        <img src="img/1.png" alt="">
+                                        <img src="img/intro/05.png" alt="">
                                     </div>
                                 </div>
                                 <div class="col-md-7 cmd-padding">
                                     <div class="img2 wow imago" data-wow-delay=".3s">
-                                        <img src="img/3.png" alt="">
+                                        <img src="img/intro/04.png" alt="">
                                     </div>
                                     <div class="img3 wow imago" data-wow-delay=".8s">
-                                        <img src="img/2.png" alt="">
+                                        <img src="img/intro/01.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -307,7 +307,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="item md-mb50 wow fadeInUp" data-wow-delay=".5s">
-                            <span class="fab"><img src="img/logo_facebook.png" alt=""></span>
+                            <span class="fab"><img src="img/icon/logo_facebook.png" alt=""></span>
                             <h6>Facebook Marketing</h6>
                             <p>Facebook's advertising potential is growing rapidly and is gradually becoming a counterweight to the giant Google. We are confident to bring the most effective <span class="moretext"> Facebook communication campaigns, with long-term real combat experience.
                                 Built by a team of professional content creators. Creative products in terms of images and content will attract and reach the ideal target customer group. With the aim of providing content that is worth watching and sharing,
@@ -317,7 +317,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="item md-mb50 wow fadeInUp" data-wow-delay=".3s">
-                            <span class="fab"><img src="img/tiktok_icon.png" alt=""></span>
+                            <span class="fab"><img src="img/icon/tiktok_icon.png" alt=""></span>
                             <h6>TikTok</h6>
                             <p>Tiktok is becoming the most developed social media trend today. We bring a creative, young and enthusiastic Media team with diverse ages from Gen Y to Gen Z. Converging sharp skills, <span class="moretext2">market analysis to catch up with trends,
                                 experience in building ideas clever advertising, becoming a trend to attract viewers. Moreover, the X10 Digital team has a full team of Influencers, contributing to the success factors on the tiktok platform.</span></p>
@@ -326,7 +326,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="item wow fadeInUp" data-wow-delay=".8s">
-                            <span class="fab"><img src="img/google_logo.png" alt=""></span>
+                            <span class="fab"><img src="img/icon/google_logo.png" alt=""></span>
                             <h6>Google Services</h6>
                             <p>We use Google’s Display Network which gives us access to a huge range of websites in every market imaginable. Wherever your target customers are congregating online, we can <span class="moretext3">reach them via display advertising.</span></p>
                             <p class="moreless-button3">Read more</p>
@@ -456,7 +456,7 @@
             <div class="container custom-p">
                 <div class="sec-head2 custom-font">
                     <!-- WE CREATE THE TREND -->
-                    <h3 class="wow tbg2" data-splitting>WE CREATE <span></span>THE TREND.</h3>
+                    <h3 class="wow tbg2" data-splitting>WE <span></span>CREATE <span></span>THE <span></span>TREND.</h3>
                     <!-- <span class="tbg text-left pb-50">WE CREATE THE TREND</span> -->
                     <h5 class="size-partner fadeIn" data-wow-delay=".5s">We believe that every great brand starts with a deep understanding of your customers. <br>By discovering their needs, wants & desires, our brand experiences are designed to naturally guide your customers through the buyer’s journey,
                         one step at a time.</h5>
@@ -481,8 +481,8 @@
                         <!-- gallery item -->
                         <div class="col-md-6 items perfume lg-mr wow fadeInUp" data-wow-delay=".4s">
                             <div class="item-img">
-                                <a href="project-details.html" class="imago wow">
-                                    <img src="img/projects/nuoc-hoa-2.png" alt="image">
+                                <a href="#" class="imago wow">
+                                    <img src="img/projects/nuoc-hoa-6.png" alt="image">
                                     <div class="item-img-overlay"></div>
                                 </a>
                             </div>
@@ -495,7 +495,7 @@
                         <!-- gallery item -->
                         <div class="col-md-6 items shampoo wow fadeInUp" data-wow-delay=".4s">
                             <div class="item-img">
-                                <a href="project-details.html" class="imago wow">
+                                <a href="#" class="imago wow">
                                     <img src="img/projects/sua-tam-4.png" alt="image">
                                     <div class="item-img-overlay"></div>
                                 </a>
@@ -509,7 +509,7 @@
                         <!-- gallery item -->
                         <div class="col-md-6 items perfume wow fadeInUp" data-wow-delay=".4s">
                             <div class="item-img">
-                                <a href="project-details.html" class="imago wow">
+                                <a href="#" class="imago wow">
                                     <img src="img/projects/nuoc-hoa-4.jpg" alt="image">
                                     <div class="item-img-overlay"></div>
                                 </a>
@@ -523,7 +523,7 @@
                         <!-- gallery item -->
                         <div class="col-md-6 items perfume graphic wow fadeInUp" data-wow-delay=".4s">
                             <div class="item-img">
-                                <a href="project-details.html" class="imago wow">
+                                <a href="#" class="imago wow">
                                     <img src="img/projects/nuoc-hoa-3.png" alt="image">
                                     <div class="item-img-overlay"></div>
                                 </a>
@@ -537,7 +537,7 @@
                         <!-- gallery item -->
                         <div class="col-md-6 items shampoo wow fadeInUp" data-wow-delay=".4s">
                             <div class="item-img">
-                                <a href="project-details.html" class="imago wow">
+                                <a href="#" class="imago wow">
                                     <img src="img/projects/sua-tam.png" alt="image">
                                     <div class="item-img-overlay"></div>
                                 </a>
@@ -551,8 +551,8 @@
                         <!-- gallery item -->
                         <div class="col-md-6 items perfume wow fadeInUp" data-wow-delay=".4s">
                             <div class="item-img">
-                                <a href="project-details.html" class="imago wow">
-                                    <img src="img/projects/nuoc-hoa-5.png" alt="image">
+                                <a href="#" class="imago wow">
+                                    <img src="img/projects/nuoc-hoa-7.png" alt="image">
                                     <div class="item-img-overlay"></div>
                                 </a>
                             </div>
