--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
                             </form>
                         </div>
                         <div class="insta">
-                            <h6 class="custom-font stit simple-btn">Fanpage</h6>
+                            <h6 class="custom-font stit simple-btn">Fanpage</h6><br>
                             <div class="fb-page" data-href="https://www.facebook.com/102756055343989/" data-tabs="timeline" data-width="" data-height="130" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
                                 <blockquote cite="https://www.facebook.com/102756055343989/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/102756055343989/">Công Ty Truyền Thông X10 Digital Việt Nam</a></blockquote>
                             </div>
